# hermes_mem_gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  cli.py  config.py  governance.py  namespace.py  plugin.yaml  pyproject.toml  storage.py
docs/: README.md  api.md  architecture.md  data_models.md  developer_guide.md  glossary.md
docs/modules/: cli.md  config.md  governance.md  memory_provider.md  namespace.md  policy.md  storage.md
openspec/changes/add-daily-memory-maintenance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-add-layered-lancedb-sqlite-memory-provider/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-add-openwebui-gateway-user-isolation/: design.md  proposal.md  tasks.md
openspec/changes/refactor-memory-provider-architecture/: design.md  proposal.md  tasks.md
openspec/specs/layered-memory-provider/: spec.md
openspec/specs/memory-lifecycle-governance/: spec.md
openspec/specs/memory-namespace-routing/: spec.md
plugins/: __init__.py
plugins/memory/: __init__.py
plugins/memory/layered_lancedb_sqlite/: README.md  __init__.py  background.py  cli.py  config.py  governance.py  identity_sidecar.py  maintenance_service.py  memory_write_service.py  namespace.py  policy.py  promotion_service.py  prompt_format.py  recall_service.py  storage.py
tests/: test_architecture_refactor.py  test_daily_memory_maintenance.py  test_embedder_stability.py  test_expires_at.py  test_identity_columns.py  test_identity_sidecar.py  test_platform_isolation.py  test_provider.py
(+12 files in other folders)
