[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-layered-memory-provider"
version = "0.3.1"
description = "Hermes memory provider with layered SQLite and LanceDB-backed recall."
readme = "plugins/memory/layered_lancedb_sqlite/README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "pyarrow>=16.0.0",
  "lancedb>=0.6.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["plugins*"]
